tools: rename GL check helper

Since we're going to add another one based on gles.

https://bugzilla.gnome.org/show_bug.cgi?id=686806